--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": ["babel-preset-expo"],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source"]
+      "plugins": ["transform-react-jsx-source",
+      "transform-decorators-legacy"]
     }
   }
 }
