--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "color": "1.0.3",
     "expo": "^18.0.3",
+    "mobx": "^3.1.16",
+    "mobx-react": "^4.2.2",
+    "native-base": "^2.2.0",
+    "prettier": "^1.5.2",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-navigation": "^1.0.0-beta.11"
