--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,7 @@
 {
  "parser": "babel-eslint",
  "extends": "airbnb",
- "plugins": [
-     "react",
-     "jsx-a11y",
-     "import",
-     "react-native"
- ],
+ "plugins": ["react-native"],
  "rules": {
      "no-underscore-dangle": "off",
      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
