--- a/feathersServer/package.json
+++ b/feathersServer/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-native-mobx-feathers",
   "description": "Basic app using mobx + feathers",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "homepage": "",
   "main": "src",
-  "keywords": [
-    "feathers"
-  ],
+  "keywords": ["feathers"],
   "author": {
     "name": "",
     "email": ""
@@ -28,25 +26,25 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
-    "compression": "^1.6.2",
-    "cors": "^2.8.3",
-    "eslint": "^4.1.1",
-    "feathers": "^2.1.4",
-    "feathers-authentication": "^1.2.6",
+    "compression": "^1.7.0",
+    "cors": "^2.8.4",
+    "eslint": "^4.5.0",
+    "feathers": "^2.1.7",
+    "feathers-authentication": "^1.2.7",
     "feathers-authentication-hooks": "^0.1.4",
     "feathers-authentication-jwt": "^0.3.2",
-    "feathers-authentication-local": "^0.4.3",
+    "feathers-authentication-local": "^0.4.4",
     "feathers-authentication-oauth2": "^0.2.5",
     "feathers-configuration": "^0.4.1",
-    "feathers-errors": "^2.8.2",
-    "feathers-hooks": "^2.0.1",
-    "feathers-hooks-common": "^3.5.5",
-    "feathers-mongoose": "^5.1.0",
+    "feathers-errors": "^2.9.1",
+    "feathers-hooks": "^2.0.2",
+    "feathers-hooks-common": "^3.7.2",
+    "feathers-mongoose": "^5.1.2",
     "feathers-rest": "^1.8.0",
     "feathers-socketio": "^2.0.0",
-    "helmet": "^3.6.1",
-    "mocha": "^3.4.2",
-    "mongoose": "^4.11.1",
+    "helmet": "^3.8.1",
+    "mocha": "^3.5.0",
+    "mongoose": "^4.11.8",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^1.0.0",
