--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "~18.0.0",
+    "@storybook/react-native": "^3.2.8",
+    "babel-eslint": "^7.2.3",
+    "eslint-plugin-react-native": "^3.0.1",
+    "jest-expo": "~20.0.0",
+    "react-dom": "16.0.0-alpha.12",
     "react-native-scripts": "0.0.40",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -13,20 +17,22 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "storybook": "storybook start -p 7007"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "color": "1.0.3",
-    "expo": "^18.0.3",
+    "babel-preset-es2015": "^6.24.1",
+    "color": "2.0.0",
+    "expo": "^20.0.0",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "native-base": "^2.2.0",
     "prettier": "^1.5.2",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
