--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,31 @@
 {
- "parser": "babel-eslint",
- "extends": "airbnb",
- "plugins": ["react-native"],
- "rules": {
-     "no-underscore-dangle": "off",
-     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-     "react/forbid-prop-types": "off",
-     "no-alert": "off",
-     "no-console": "off",
-     "no-unused-vars": "off",
-     "react/prefer-stateless-function": "off",
-     "class-methods-use-this": "off",
- },
- "settings": {
-     "import/resolver": {
-         "node": {
-             "extensions": [".js", ".android.js", ".ios.js"]
-         }
-     }
- },
- "globals": {
-     "fetch": true,
-     "navigator": true,
-     "window": true,
-     "alert": true,
-     "console": true,
-     "unused-vars": true,
-   }
+  "parser": "babel-eslint",
+  "extends": "airbnb",
+  "plugins": ["react-native"],
+  "rules": {
+    "no-underscore-dangle": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/forbid-prop-types": "off",
+    "no-alert": "off",
+    "no-console": "off",
+    "no-unused-vars": "off",
+    "react/prefer-stateless-function": "off",
+    "class-methods-use-this": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {},
+      "node": {
+        "extensions": [".js", ".android.js", ".ios.js"]
+      }
+    }
+  },
+  "globals": {
+    "fetch": true,
+    "navigator": true,
+    "window": true,
+    "alert": true,
+    "console": true,
+    "unused-vars": true
+  }
 }
