--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "private": true,
   "devDependencies": {
     "@storybook/react-native": "^3.2.8",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-react-native": "^3.0.1",
+    "flow-bin": "^0.53.1",
     "jest-expo": "~20.0.0",
     "react-dom": "16.0.0-alpha.12",
     "react-native-scripts": "0.0.40",
@@ -31,6 +41,7 @@
     "mobx-react": "^4.2.2",
     "native-base": "^2.2.0",
     "prettier": "^1.5.2",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.11"
